UtahLiveDataTest/src/objects/FINETBatchScheduleChild__c.object
<CustomObject>
    <fields>
        <fullName>ErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ErrorCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FINETBatchScheduleParent__c</fullName>
        <label>FINET Batch Schedule Parent</label>
        <referenceTo>FINETBatchScheduleParent__c</referenceTo>
        <relationshipLabel>FINET Batch Schedule Children</relationshipLabel>
        <relationshipName>FINET_Batch_Schedule_Children</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Log__c</fullName>
        <label>Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <formula>SuccessCount__c + ErrorCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuccessCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SuccessCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>FINET Batch Schedule Child</label>
    <nameField>
        <label>FINET Batch Schedule Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Batch Schedule Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>